Tests now run properly as part of maven