@@ -19,8 +19,9 @@
     <url>https://github.com/boulder-on/JPassport#readme</url>
 
     <properties>
-        <maven.compiler.source>16</maven.compiler.source>
-        <maven.compiler.target>16</maven.compiler.target>
+<!--        <maven.compiler.source>16</maven.compiler.source>-->
+<!--        <maven.compiler.target>16</maven.compiler.target>-->
+        <maven.compiler.release>16</maven.compiler.release>
     </properties>
 
         <dependencies>
@@ -71,21 +72,14 @@
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.22.0</version>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M5</version>
                     <configuration>
                         <argLine>
-                            --illegal-access=permit
+                            -Dforeign.restricted=permit
                         </argLine>
                     </configuration>
                 </plugin>
-
             </plugins>
         </pluginManagement>
     </build>
